--- a/style.css
+++ b/style.css
@@ -213,19 +213,17 @@ a {
 /* dark theme */
 [data-bs-theme=dark] {
   color-scheme: dark;
-
   --heading-color: #fff;
   --bs-heading-color: #fff;
-  --bs-link-color: #CCCCCC;
-  --bs-link-hover-color: var(--bs-primary);
+  --bs-link-color: #000;
+  --bs-link-hover-color: #373b3e;
   --bs-link-color-rgb: 204, 204, 204;
   --bs-link-hover-color-rgb: 131, 169, 172;
-  --bs-body-color: var(--bs-light);
+  --bs-body-color: #373b3e;
   --bs-body-color-rgb: 241, 241, 240;
-  --bs-body-bg: #111;
+  --bs-body-bg: #373b3e;
   --bs-body-bg-rgb: 17, 17, 41;
-
-  color: var(--bs-gray);
+  color: #fff;
 }
 
 [data-bs-theme=dark] .dropdown-item {
@@ -582,4 +580,38 @@ body.nav-active .nav__list-item:nth-child(10) {
   #billboard figure figcaption {
     position: relative;
   }
+}
+
+.bg-secondary {
+    --bs-bg-opacity: 1;
+    background-color: rgb(247 218 249) !important;
+}
+
+.btn-dark {
+    --bs-btn-color: #212529 !important;
+    --bs-btn-bg: #fff !important;
+    --bs-btn-border-color: #212529;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #424649;
+    --bs-btn-hover-border-color: #373b3e;
+    --bs-btn-focus-shadow-rgb: 66,70,73;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #4d5154;
+    --bs-btn-active-border-color: #373b3e;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #212529;
+    --bs-btn-disabled-border-color: #212529;
+}
+
+.bg-black {
+    --bs-bg-opacity: 1;
+    background-color: rgb(204 108 188) !important
+}
+
+
+
+a {
+    color: #fff;
+    text-decoration: underline;
 }
