--- a/style.css
+++ b/style.css
@@ -611,7 +611,12 @@ body.nav-active .nav__list-item:nth-child(10) {
 
 
 
+/* a { */
+    /* color: #fff; */
+    /* text-decoration: underline; */
+/* } */
+
 a {
-    color: #fff;
+    color: #f051cb;
     text-decoration: underline;
 }
